force-app/main/default/objects/tc9_pr__Assignment_Cost__c/tc9_pr__Assignment_Cost__c.object-meta.xml
<CustomObject>
    <description>A junction object between the Assignment and an Employment Cost record.  Used in the calculation of oncosts during the General Ledger process.</description>
    <label>Assignment Cost</label>
    <nameField>
        <displayFormat>ACST-{0000000000}</displayFormat>
        <label>Assignment Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>