force-app/main/default/objects/tc9_pr__Assignment_Cost__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Assignment of an Assignment Level record</description>
    <inlineHelpText>The related Assignment of an Assignment Level record</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Assignment Costs</relationshipLabel>
    <relationshipName>Assignment_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>