force-app/main/default/objects/tc9_pr__Assignment_Cost__c/fields/tc9_pr__Employment_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employment_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The relationship between an Employment Cost template record and the parent Employment Cost record</description>
    <inlineHelpText>The relationship between an Employment Cost template record and the parent Employment Cost record</inlineHelpText>
    <label>Employment Cost</label>
    <referenceTo>tc9_pr__Employment_Cost__c</referenceTo>
    <relationshipLabel>Assignment Costs</relationshipLabel>
    <relationshipName>Assignment_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>