force-app/main/default/objects/tc9_pr__Assignment_Cost__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The status of the Assignment Cost</description>
    <inlineHelpText>The status of the Assignment Cost</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>