force-app/main/default/objects/tc9_pr__Assignment_Cost__c/fields/tc9_pr__Template_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The relationship between an Employment Cost template record and the parent Template Group</description>
    <inlineHelpText>The relationship between an Employment Cost template record and the parent Template Group</inlineHelpText>
    <label>Template Group</label>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Assignment Costs</relationshipLabel>
    <relationshipName>Assignment_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>