force-app/main/default/objects/tc9_pr__Assignment_Cost__c/recordTypes/tc9_pr__Assignment_Level.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Assignment_Level</fullName>
    <active>true</active>
    <label>Assignment Level</label>
</RecordType>