force-app/main/default/objects/tc9_pr__Assignment_Cost__c/recordTypes/tc9_pr__Employment_Cost_Template.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Employment_Cost_Template</fullName>
    <active>true</active>
    <label>Employment Cost Template</label>
</RecordType>